[package]
name = "concord4ws"
version = "0.2.0"
edition = "2021"

[dependencies]
concord4 = { path = "./concord4-rs", features = ["json"] }
futures = "0.3.30"
tokio = { version = "1.39.2", features = ["full"] }
tokio-tungstenite = "0.20.1"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
dotenv = { version = "0.15.0", optional = true }
anyhow = "1.0.86"
tokio-util = { version = "0.7.11" }
serde = { version = "1.0.204", features = ["derive"] }
serde_json = { version = "1.0.121" }

[workspace]
members = ["./concord4-rs"]

[features]
default = []
dotenv = ["dep:dotenv"]
